Adicionar server node para o projeto

--- a/src/package.json
+++ b/src/package.json
@@ -2,9 +2,11 @@
   "name": "src",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:generate": "prisma generate",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
