--- a/src/package.json
+++ b/src/package.json
@@ -15,8 +15,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^7.3.2",
     "@prisma/client": "^5.4.2",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
