--- a/src/package.json
+++ b/src/package.json
@@ -18,11 +18,13 @@
     "@google-cloud/storage": "^7.3.2",
     "@prisma/client": "^5.5.2",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.16",
     "prisma": "^5.5.2"
   }
 }
