--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,6 @@
 {
   "name": "src",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "engines": {
     "node": "18"
@@ -15,16 +14,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/storage": "^7.3.2",
-    "@prisma/client": "^5.5.2",
+    "@google-cloud/storage": "^7.12.1",
+    "@prisma/client": "^5.18.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.16",
-    "prisma": "^5.5.2"
-  }
+    "prisma": "^5.18.0"
+  },
+  "description": ""
 }
